# full-stack-search

./: .gitignore  .gitmodules  docker-compose.yml  readme.md  seed.py
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
frontend/src/: config.rs  lib.rs
frontend/src/controllers/: api.rs
frontend/src/models/: mod.rs  review.rs  search.rs
frontend/src/views/: app.rs  mod.rs  review_form.rs  search_view.rs
